fixed z-index for auth modals

--- a/src/components/AuthModals/ModalLayout/modalLayout.module.scss
+++ b/src/components/AuthModals/ModalLayout/modalLayout.module.scss
@@ -10,5 +10,5 @@
     align-items: center;
 
     cursor: pointer;
-    z-index: 0;
+    z-index: 100;
 }
